2006-05-21  Giancarlo Capella <giancarlo@comm.cc>
	* client/gtk/frontend.h, client/gtk/resource.c,
	client/gtk/data/grain.png, client/gtk/data/wool.png,
	client/gtk/data/ore.png, client/gtk/data/Makefile.am,
	client/gtk/data/lumber.png, client/gtk/data/brick.png,
	client/gtk/legend.c, client/gtk/gui.c, client/gtk/gui.h: Visual display
	of the resources in the resources panel and the legend

2006-05-20  Roland Clobus <rclobus@bigfoot.com>
	* common/quoteinfo.c, common/game.c, common/quoteinfo.h,
	client/callback.h, client/gtk/interface.c, client/gtk/plenty.c,
	client/gtk/frontend.h, client/gtk/gold.c, client/gtk/quote.c,
	client/gtk/legend.c, client/gtk/trade.c, client/gtk/discard.c,
	client/gtk/chat.c, client/common/client.c, client/common/client.h,
	client/common/resource.c, client/common/callback.c,
	client/common/player.c: Added const for resources
	* client/gtk/Makefile.am: Added quote-view.c and quote-view.h
	* client/gtk/trade.c, client/gtk/quote-view.c, client/gtk/quote-view.h:
	Moved code from trade.c to quote-view.c and replaced frames
	* client/gtk/player.c, client/gtk/discard.c: More descriptive asserts
	* client/gtk/resource-table.c, client/gtk/resource-table.h:
	New functions added for trade and quote
	* meta-server/main.c, client/gtk/gui.c: Signed->unsigned cleanup
	
2006-05-17  Bas Wijnen <shevek@fmf.nl>
	* client/ai/greedy.c: Fix for AI segfault.
	* client/gtk/interface.c: Allow reuse of client after winning by
	playing a soldier.

2006-05-14  Bas Wijnen <shevek@fmf.nl>
	* server/pregame.c, client/common/client.c: Fix reconnect procedure,
	add RSETUP state command.

2006-05-13  Roland Clobus <rclobus@bigfoot.com>
	* client/help/C/custom.xsl, client/help/C/pioneers.xml,
	client/help/C/Makefile.am: Manual updates. Manual conversion to html
	and htmlhelp added.
	
2006-05-09  Bas Wijnen <shevek@fmf.nl>
	* docs/pioneers-meta-server.6: Updated.

2006-05-02  Bas Wijnen <shevek@fmf.nl>
	* client/gtk/interface.c, client/gtk/plenty.c, client/gtk/frontend.h: